...

  @override
  Widget build(BuildContext context) {
    final provider = Provider.of<AnimalProvider>(context);

    return Scaffold(
      appBar: AppBar(title: const Text("Ajouter un animal")),

      body: SafeArea(
        child: Form(
          key: _formKey,
          child: SingleChildScrollView(
            padding: const EdgeInsets.all(16),
...
                SizedBox(
                  width: double.infinity,
                  height: 50,
                  child: ElevatedButton.icon(
                    icon: const Icon(Icons.save),
                    label: const Text(
                      "Enregistrer",
                      style: TextStyle(fontSize: 18),
                    ),
                    onPressed: () async {
                      if (!_formKey.currentState!.validate()) {
                        return;
                      }
...
