...
      initialiserAnimal();

      initialized = true;
    }

    return Scaffold(
      appBar: AppBar(title: const Text("Modifier un animal")),

      body: SafeArea(
        child: Form(
          key: _formKey,
          child: SingleChildScrollView(
            padding: const EdgeInsets.all(16),
...
